--- a/pkg/lintul/Rlintul/DESCRIPTION
+++ b/pkg/lintul/Rlintul/DESCRIPTION
@@ -1,11 +1,12 @@
-Package: LINTUL
+Package: Rlintul
 Type: Package
 Title: R implementation of the LINTUL crop growth simulation model
-Version: 0.1-1
-Date: 2016-06-15
+Version: 0.1-2
+Date: 2017-12-5
 LinkingTo: Rcpp
 SystemRequirements: C++11
 Imports: methods, Rcpp (>= 0.12.4)
+Depends: meteor
 Author: Robert Hijmans
 Maintainer: <r.hijmans@gmail.com>
 Description: This package implements the LINTUL model of crop growth and development.
