--- a/pkg/meteor/DESCRIPTION
+++ b/pkg/meteor/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: meteor
 Type: Package
 Title: Meteorological Data Manipulation
-Version: 0.2
+Version: 0.2-1
 LinkingTo: Rcpp
 SystemRequirements: C++11
 Imports: methods, Rcpp (>= 0.12.4)
-Date: 2017-11-03
+Date: 2017-12-06
 Author: Robert J. Hijmans
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
-Description: A set of functions for weather and climate data manipulation.
+Description: A set of functions for weather and climate data manipulation to support dynamic ecological modelling.
 License: GPL-3
 LazyLoad: yes
