--- a/pkg/Rlintul/DESCRIPTION
+++ b/pkg/Rlintul/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: Rlintul
 Type: Package
-Title: R implementation of the LINTUL crop growth simulation model
-Version: 0.1-2
-Date: 2017-12-5
+Title: R implementation of LINTUL crop growth simulation models
+Version: 0.1-3
+Date: 2017-12-7
 LinkingTo: Rcpp
 SystemRequirements: C++11
 Imports: methods, Rcpp (>= 0.12.4)
