git-svn-id: svn://svn.r-forge.r-project.org/svnroot/cropsim@188 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Rlintul/NAMESPACE
+++ b/pkg/Rlintul/NAMESPACE
@@ -1,3 +1,5 @@
 useDynLib(Rlintul)
 import(methods, Rcpp)
+importFrom("meteor", "crop<-", "soil<-", "control<-", "weather<-")
+
 exportPattern("^[^\\.]")
