--- a/pkg/meteor/NAMESPACE
+++ b/pkg/meteor/NAMESPACE
@@ -2,4 +2,5 @@ useDynLib(meteor, .registration = TRUE)
 import(methods, Rcpp)
 importFrom("stats", "aggregate", "filter", "rgamma", "rnorm", "runif", "spline")
 importFrom("utils", "download.file", "unzip", "head", "tail")
+exportMethods("crop<-", "weather<-", "soil<-", "control<-")
 exportPattern("^[^\\.\\_]")
