--- a/pkg/Rlintul/NAMESPACE
+++ b/pkg/Rlintul/NAMESPACE
@@ -1,5 +1,5 @@
 useDynLib(Rlintul)
 import(methods, Rcpp)
-importFrom("meteor", "crop<-", "soil<-", "control<-", "weather<-")
+importFrom("meteor", "crop<-", "soil<-", "control<-", "weather<-", "run")
 
 exportPattern("^[^\\.]")
