--- a/pkg/meteor/DESCRIPTION
+++ b/pkg/meteor/DESCRIPTION
@@ -8,6 +8,6 @@ Imports: methods, Rcpp (>= 0.12.4)
 Date: 2017-12-06
 Author: Robert J. Hijmans
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
-Description: A set of functions for weather and climate data manipulation to support dynamic ecological modelling.
+Description: A set of functions for weather and climate data manipulation, and other helper functions, to support dynamic ecological modelling, particularly crop and crop disease modeling.
 License: GPL-3
 LazyLoad: yes
