git-svn-id: svn://svn.r-forge.r-project.org/svnroot/cropsim@200 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Rlintul/DESCRIPTION
+++ b/pkg/Rlintul/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: Rlintul
 Type: Package
 Title: R implementation of LINTUL crop growth simulation models
-Version: 0.1-3
-Date: 2017-12-7
-LinkingTo: Rcpp
+Version: 0.1-4
+Date: 2017-12-11
+LinkingTo: Rcpp, meteor
 SystemRequirements: C++11
 Imports: methods, Rcpp (>= 0.12.4)
 Depends: meteor
