--- a/pkg/Rwofost/DESCRIPTION
+++ b/pkg/Rwofost/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: Rwofost
 Type: Package
 Title: WOFOST crop growth simulation model
-Version: 0.2-1
-Date: 2017-05-01
-LinkingTo: Rcpp
+Version: 0.2-2
+Date: 2017-12-11
+LinkingTo: Rcpp, meteor
 Imports: methods, Rcpp (>= 0.12.4)
+Depends: meteor
 SystemRequirements: C++11
 Author: Robert Hijmans and Huang Fang
 Maintainer: <r.hijmans@gmail.com>
