git-svn-id: svn://svn.r-forge.r-project.org/svnroot/cropsim@206 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Rquefts/DESCRIPTION
+++ b/pkg/Rquefts/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: Rquefts
 Type: Package
 Title: Quantitative Evaluation of the Native Fertility of Tropical Soils
-Version: 0.2-1
-Date: 2017-12-04
-LinkingTo: Rcpp
+Version: 0.2-2
+Date: 2017-12-11
+LinkingTo: Rcpp, meteor
 SystemRequirements: C++11
 Imports: methods, Rcpp (>= 0.12.4)
 Author: Robert Hijmans
