git-svn-id: svn://svn.r-forge.r-project.org/svnroot/cropsim@217 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/Rwofost/DESCRIPTION
+++ b/pkg/Rwofost/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.2-2
 Date: 2017-12-11
 LinkingTo: Rcpp, meteor
 Imports: methods, Rcpp (>= 0.12.4)
-Depends: meteor
+Depends: meteor (>= 0.2-2)
 SystemRequirements: C++11
 Author: Robert Hijmans and Huang Fang
 Maintainer: <r.hijmans@gmail.com>
