--- a/pkg/Rquefts/DESCRIPTION
+++ b/pkg/Rquefts/DESCRIPTION
@@ -8,5 +8,5 @@ SystemRequirements: C++11
 Imports: methods, Rcpp (>= 0.12.4)
 Author: Robert Hijmans
 Maintainer: Robert Hijmans <r.hijmans@gmail.com>
-Description: This package implements the QUEFTS model to estimate nutrient requirements for crops. 
+Description: This package implements the QUEFTS model to estimate nutrient requirements for crops to achieve a target yield given native soil fertility. 
 License: GPL (>=3)
