--- a/pkg/Rwofost/DESCRIPTION
+++ b/pkg/Rwofost/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: Rwofost
 Type: Package
-Title: WOFOST crop growth simulation model
-Version: 0.2-2
-Date: 2017-12-11
+Title: WOFOST Crop Growth Simulation Model
+Version: 0.2-3
+Date: 2017-12-13
 LinkingTo: Rcpp, meteor
 Imports: methods, Rcpp (>= 0.12.4)
 Depends: meteor (>= 0.2-2)
