--- a/pkg/meteor/DESCRIPTION
+++ b/pkg/meteor/DESCRIPTION
@@ -1,12 +1,14 @@
 Package: meteor
 Type: Package
 Title: Meteorological Data Manipulation
-Version: 0.2-2
+Version: 0.3-2
 LinkingTo: Rcpp
 SystemRequirements: C++11
 Imports: methods, Rcpp (>= 0.12.4)
-Date: 2017-12-12
-Author: Robert J. Hijmans
+Date: 2018-06-06
+Authors@R: c(
+	person("Robert J.", "Hijmans", role = c("cre", "aut"),  email = "r.hijmans@gmail.com")
+)
 Maintainer: Robert J. Hijmans <r.hijmans@gmail.com>
 Description: A set of functions for weather and climate data manipulation, and other helper functions, to support dynamic ecological modelling, particularly crop and crop disease modeling.
 License: GPL-3
