--- a/pkg/Rwofost/NAMESPACE
+++ b/pkg/Rwofost/NAMESPACE
@@ -1,4 +1,4 @@
 useDynLib(Rwofost)
-import(methods, Rcpp)
-importFrom("meteor", "crop<-", "soil<-", "control<-", "weather<-", "run")
-exportPattern("^[^\\.]")
+import(methods, Rcpp, meteor)
+exportMethods("crop<-", "soil<-", "control<-", "weather<-", "run")
+export(wofost, wofost_model, wofost_crop, wofost_soil, wofost_control)
