--- a/pkg/Rwofost/inst/wofost/control.ini
+++ b/pkg/Rwofost/inst/wofost/control.ini
@@ -1,11 +1,19 @@
+## Location
+latitude = 30
+elevation = 150
+CO2 = 360
+ANGSTA = -0.18
+ANGSTB = -0.55
+
 # Start date of model
 modelstart = 2012-02-06
 
-# number of days that crop model starts (suitability for sowing, sowing, or emergend) after start date
+# number of days that crop model starts (suitability for sowing, sowing, or emergence) after start date
 cropstart = 0
 
-# Production levels (1 = Potential or 2 = Water limited)
-IPRODL = 2
+# Production levels (0 = false or 1 = true)
+water_limited = 0
+# nutrient_limited = 0
 
 # Type of water-limited crop growth: 0 (effects of drought only), 1 (effects of both drought and oxygen shortage).
 IOXWL = 0                         
@@ -25,28 +33,4 @@ IDAYEN  = 365
 
 # Maximum duration (days after cropstart).
 IDURMX  = 365
-
-# output option FALSE = 0, TRUE = 1
-long_output = 1 
-
-## should be part of weather
-latitude = 30
-elevation = 150
-ANGSTA = -0.18
-ANGSTB = -0.55
-CO2 = 360
-
-## NPK
-NPKdates=1976-04-29,1976-06-16
-N=0,0
-P=40,10
-K=20,20
-Nrecovery=0.7,0.7
-Precovery=0.7,0.7
-Krecovery=0.7,0.7
-
-## Irrigation
-IRRdates=1976-04-30, 1976-06-17
-IRR=0,0
-
 
